@@ -1,2 +1,0 @@
-Provides an mtl compatible version of the GhcT monad-transformer
-defined in the GHC-API since version 6.10.1.
