@@ -1,19 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2020/05/13 04:53:15 rillig Exp $
-${HS_INTF}/package-description
-${HS_INTF}/package-id
-${HS_IMPL}/Control/Monad/Ghc.dyn_hi
-${HS_IMPL}/Control/Monad/Ghc.hi
-${HS_IMPL}/Control/Monad/Ghc.p_hi
-${HS_IMPL}/libHS${HS_PKGID}.a
-${HS_IMPL}/libHS${HS_PKGID}_p.a
-lib/${HS_PLATFORM}/libHS${HS_PKGID}-${HS_VER}.so
-${HS_DOCS}/LICENSE
-${HS_DOCS}/html/Control-Monad-Ghc.html
-${HS_DOCS}/html/doc-index.html
-${HS_DOCS}/html/ghc-mtl.haddock
-${HS_DOCS}/html/haddock-bundle.min.js
-${HS_DOCS}/html/index.html
-${HS_DOCS}/html/linuwial.css
-${HS_DOCS}/html/meta.json
-${HS_DOCS}/html/quick-jump.css
-${HS_DOCS}/html/synopsis.png
