@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 10:14:57 nia Exp $
-
-BLAKE2s (ghc-mtl-1.2.1.0.tar.gz) = 12f5948be8357ddbf4d552116a0d84a857ecbd2baaa6934b82b5de98cc3ec73e
-SHA512 (ghc-mtl-1.2.1.0.tar.gz) = 3b65c177818cc669bf9b3018afdbd0bf96b049dd140c5343c6608ec46dcf4a91f992986b9494ee25523970f5f02d71e9e3614ecca81b06a7f16c6b871112d6e8
-Size (ghc-mtl-1.2.1.0.tar.gz) = 2963 bytes
